# ski_run_open_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
ski_run_open_bot/: __init__.py  main.py  ski_run.py  solitude_utah.py  util.py
tests/: test_ski_run.py  test_ski_run_open_bot.py  test_solitude.py
