[tool.poetry]
name = "ski-run-open-bot"
version = "0.1.0"
description = ""
authors = ["brucejiverson <brucejamesiverson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.10.0"
selenium = "^4.8.2"
dryscrape = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
